--- a/projects.html
+++ b/projects.html
@@ -305,15 +305,15 @@
                 <li>
                     <a
                       class="dropdown-item"
-                      href="https://github.com/Orion-Technologies/WEEK23MIT"
-                      >Shipping Cart AWS Repository</a
+                      href="https://github.com/Orion-Technologies/WEEK23MIT/tree/main/create-react-app_starter"
+                      >Heroku deploy Repository</a
                     >
                   </li>
                   <li>
                     <a
                       class="dropdown-item"
                       href="http://containerizeaanddeployanapp.herokuapp.com/"
-                      >Shopping Cart Live AWS View</a
+                      >Heroku Deploy Live View</a
                     >
                   </li>
             </ul>
