--- a/projects.html
+++ b/projects.html
@@ -300,7 +300,7 @@
        <div class="card">
           <img src="images/herokuDeploy.png" class="card-img-top" alt="herokuDiploy" title="herokuDiploy">
           <div class="card-body">
-            <h5 class="card-title">herokuDiploy</h5>
+            <h5 class="card-title">Heroku Deploy</h5>
             <ul>
                 <li>
                     <a
