--- a/projects.html
+++ b/projects.html
@@ -298,7 +298,7 @@
         </div>
        
        <div class="card">
-          <img src="images/herokuDeploy.png" class="card-img-top" alt="herokuDiploy" title="herokuDiploy">
+          <img src="images/herokuDeploy.png" class="card-img-top" alt="herokuDeploy" title="herokuDeploy">
           <div class="card-body">
             <h5 class="card-title">Heroku Deploy</h5>
             <ul>
