--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </div>
   <!-- Video Embed -->
 
-    <h1 class="display-1">Introducing Myselt</h1>
+    <h1 class="display-1">Introducing Myself</h1>
     <div class="ratio ratio-16x9">
       <iframe
         width="560"
